<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/bg_radius_12sdp"
        android:backgroundTint="#212121"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginVertical="@dimen/_24sdp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/White_FF"
                android:text="@string/rate_us"
                android:textSize="@dimen/_16ssp"/>
            <ImageView
                android:id="@+id/imgRate"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_100sdp"/>
            <TextView
                android:layout_marginHorizontal="@dimen/_16ssp"
                android:id="@+id/tvContent"
                android:gravity="center"
                android:layout_marginTop="@dimen/_24ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/White_FF"
                android:text="@string/how_do_you_feel_about_the_app_your_feedback_is_important_to_us"
                android:textSize="@dimen/_14sdp"/>
            <com.volio.rate_feedback.custom_view.StartView
                android:id="@+id/starView"
                android:layout_width="@dimen/_244sdp"
                android:layout_height="@dimen/_52sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                app:sv_start_size="@dimen/_32sdp"
                app:sv_big_start_size="@dimen/_32sdp"
                app:sv_big_star_checked="@drawable/ic_start_checked"
                app:sv_big_star_unchecked="@drawable/ic_start_unchecked"
                app:sv_star_checked="@drawable/ic_start_checked"
                app:sv_star_unchecked="@drawable/ic_start_unchecked"
                app:sv_color_shadow="#FFC700"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/the_best_rating_star"
                    android:textColor="@color/White_FF"/>
                <ImageView
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_best_star"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:text="@string/rate"
                android:background="@drawable/bg_button"
                android:backgroundTint="#434343"
                android:includeFontPadding="false"
                android:alpha="0.3"
                android:clickable="false"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/White_FF"
                android:textSize="@dimen/_14ssp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imgCancel"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:src="@drawable/ic_cancel"
            android:layout_gravity="end"/>
    </FrameLayout>
</layout>
