<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_12sdp"
        android:backgroundTint="#212121">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16ssp"
            android:layout_marginVertical="@dimen/_24sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/your_feedback_is_helpful"
                android:textColor="@color/White_FF"
                android:textSize="@dimen/_16ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <EditText
                android:id="@+id/edFeedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_88sdp"
                android:layout_marginTop="@dimen/_16ssp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/bg_radius_10sdp"
                android:backgroundTint="#101010"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top|start"
                android:hint="@string/type_your_feedback_here"
                android:padding="@dimen/_8sdp"
                android:scrollbars="vertical"
                android:textColor="@color/White_FF"
                android:textColorHint="#E1E1E1"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvFeedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:alpha="0.3"
                android:background="@drawable/bg_button"
                android:backgroundTint="#434343"
                android:clickable="false"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate"
                android:textColor="@color/White_FF"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgCancel"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="end"
            android:src="@drawable/ic_cancel" />
    </FrameLayout>
</layout>
